force-app/main/default/objects/Trigger_Registration__mdt/Trigger_Registration__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Registration</label>
    <pluralLabel>Trigger Registrations</pluralLabel>
</CustomObject>