force-app/main/default/objects/Trigger_Registration__mdt/fields/Allow_Recursive_Calls__c.field-meta.xml
<CustomField>
    <fullName>Allow_Recursive_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Recursive Calls</label>
    <type>Checkbox</type>
</CustomField>