force-app/main/default/objects/Trigger_Registration__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>