force-app/main/default/objects/Trigger_Registration__mdt/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>