force-app/main/default/objects/Trigger_Registration__mdt/listViews/All_Triggers.listView-meta.xml
<ListView>
    <fullName>All_Triggers</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Active__c</columns>
    <columns>Before_Insert__c</columns>
    <columns>Before_Update__c</columns>
    <columns>Before_Delete__c</columns>
    <columns>After_Insert__c</columns>
    <columns>After_Update__c</columns>
    <columns>After_Delete__c</columns>
    <columns>After_Undelete__c</columns>
    <columns>Allow_Recursive_Calls__c</columns>
    <columns>Debug__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Triggers</label>
</ListView>